force-app/main/default/objects/clofor_com_cfs__PIBank__c/fields/clofor_com_cfs__UnpaidBalancePILocalForBank__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnpaidBalancePILocalForBank__c</fullName>
    <label>UNPAID BALANCE P/I(LOCAL)-FOR BANK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>