force-app/main/default/objects/clofor_com_cfs__PIBank__c/fields/clofor_com_cfs__UnpaidBalancePILocalFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnpaidBalancePILocalFormula__c</fullName>
    <formula>clofor_com_cfs__PurchasingInvoiceID__r.clofor_com_cfs__UnpaidBalanceLocal__c</formula>
    <label>UNPAID BALANCE P/I(LOCAL)-FORMULA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>